--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     },
     "author": "Dennis Hacquebord",
     "dependencies": {
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
+        "@types/material-ui": "^0.21.8",
+        "axios": "^0.21.1",
         "classnames": "^2.2.6",
+        "clickup.js": "^2.1.0",
         "next": "^10.0.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "sass": "^1.29.0"
+        "sass": "^1.29.0",
+        "swr": "^0.5.5"
     },
     "devDependencies": {
         "@types/node": "^14.14.8",
